media queries added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="main__content--second">
       <div class="main__content container">
-        <img src="img/image-01.jpg" alt="main content image">
+        <img class="main__content--image" src="img/image-01.jpg" alt="main content image">
         <div class="main__text">
           <h1 class="main__text--h1">Created with care</h1>
           <p class="main__text--p">Felis donec et odio pellentesque diam volutpat. Aliquam
