challenge my way finished

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <div class="header__title">
       <h6 class="header__title--h6">LOREM IPSUM SIT</h6>
-      <h1 class="header__title--h1">Responsive layouts don't have to be a struggle</h1>
+      <h1 class="header__title--h1">Responsive layouts don't <br> have to be a struggle</h1>
     </div>
   </header>
 
@@ -41,20 +41,20 @@
   <main class="main">
     <div class="main__content--first">
       <div class="main__content container">
-        <div class="main__text">
+        <div class="main__text col">
           <h1 class="main__text--h1">Made custom for you</h1>
           <p class="main__text--p">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam.</p>
         </div>
-        <img class="main__content--image" src="img/image-01.jpg" alt="main content image">
+        <div class="col"><img class="main__content--image" src="img/image-01.jpg" alt="main content image"></div>
       </div>
     </div>
 
     <div class="main__content--second">
       <div class="main__content container">
-        <img class="main__content--image" src="img/image-01.jpg" alt="main content image">
-        <div class="main__text">
+        <div class="col"><img class="main__content--image" src="img/image-01.jpg" alt="main content image"></div>
+        <div class="main__text col">
           <h1 class="main__text--h1">Created with care</h1>
           <p class="main__text--p">Felis donec et odio pellentesque diam volutpat. Aliquam
             purus sit amet luctus venenatis. Turpis in eu mi
